--- a/.github/workflows/auto-pr-changelog.yml
+++ b/.github/workflows/auto-pr-changelog.yml
@@ -3,6 +3,8 @@ name: "Auto Changelog"
 on:
   pull_request:
     types: [labeled, unlabeled]
+    branches:
+      - '**'
 
 jobs:
   auto-changelog:
